--- a/.github/workflows/boost.yml
+++ b/.github/workflows/boost.yml
@@ -22,3 +22,10 @@ jobs:
         with:
           api_token: ${{ secrets.BOOST_API_TOKEN }}
           registry_module: boostsecurityio/native-scanner
+
+      - name: MobsfScan
+        uses: boostsecurityio/boostsec-scanner-github@v4
+        with:
+          api_token: ${{ secrets.BOOST_API_TOKEN }}
+          registry_module: opensecurity/mobsfscan
+          api_endpoint: https://api.dev.boostsec.io
